--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import '../node_modules/leaflet/dist/leaflet.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
